--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "framer-motion": "^12.4.3",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
