--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "groq-sdk": "^0.15.0",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.9"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.9",
+    "npm": "^11.1.0",
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   }
 }
