--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "framer-motion": "^12.4.3",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.475.0",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
-    "react-router-dom": "^6.29.0"
+    "react-router-dom": "^6.29.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
