--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 google-generativeai
-python-dotenv
+# python-dotenv
 langchain
 PyPDF2
 chromadb
@@ -8,3 +8,12 @@ faiss-cpu
 langchain_google_genai
 pandas
 openpyxl
+torch
+transformers
+# bitsandbytes
+# gradio
+google-generativeai
+python-dotenv
+langchain
+PyPDF2
+faiss-cpu
