--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.29.0",
+    "react-spinners": "^0.15.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
